--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+a {
+  text-decoration: None;
+}
+
 body {
   margin: 0;
   font-family: 'Maven Pro', cursive;
@@ -15,6 +19,55 @@ body {
   color: #fff;
   background-color: #080B59;
   margin:0;
-  padding-top: 10px;
+  padding-top: 4px;
   /* // padding:0.5em; */
-  }
+}
+
+.Nav-bar {
+  display: flex;
+  justify-content: space-around;
+  margin-left: 350px;
+  margin-right: 350px;
+  margin-bottom: 10px;
+  color: #fff;
+  background-color: #080B59;
+}
+
+.Nav-text {
+  color: white;
+  text-decoration: None;
+}
+
+.Item-container {
+  list-style: none;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+padding:20px;
+}
+
+.img {
+  width:200px;
+  height: 300px;
+}
+
+.Item-box {
+  width: 160px;
+  height: 400px;
+  text-align: center;
+}
+
+.Footer {
+  font-family: 'Maven Pro', cursive;
+  text-align: center;
+  font-size:1.5em;
+  color: #fff;
+  background-color: #080B59;
+  margin:0;
+  padding-bottom: 4px;
+}
+
+.description-box {
+  width: 160px;
+  text-align: center;
+}
