--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,7 @@ body {
 .Nav-bar {
   display: flex;
   justify-content: space-around;
-  margin-left: 350px;
-  margin-right: 350px;
+  margin: auto ;
   margin-bottom: 10px;
   color: #fff;
   background-color: #080B59;
