--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 
 .Header {
   font-family: 'Maven Pro', cursive;
-  text-align: center;
+  
   font-size:1.5em;
   color: #fff;
   background-color: #080B59;
@@ -23,10 +23,27 @@ body {
   /* // padding:0.5em; */
 }
 
+.title {
+  margin-top: -50px;
+}
+
+.title-text {
+  font-family: 'Maven Pro', cursive;
+  font-size: 1.8em;
+  text-align: center;
+}
+
+.heart {
+  margin-top: 15px;
+  margin-right:20px;
+  text-align: right;
+}
+
 .Nav-bar {
   display: flex;
   justify-content: space-around;
   margin: auto ;
+  margin-top: -30px;
   margin-bottom: 10px;
   color: #fff;
   background-color: #080B59;
