--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,16 @@ body {
   margin: 0;
   font-family: 'Maven Pro', cursive;
   font-size: 16px;
+  background-image: url(/src/images/RedCurtains.png);
+  background-size: contain;
+  color: white;
 }
 
 .Header {
   font-family: 'Maven Pro', cursive;
   font-size:1.5em;
   color: #fff;
-  background-color: #080B59;
+  background: #080B59;
   margin:0;
   padding-top: 4px;
   width: 100%;
@@ -104,10 +107,16 @@ padding:20px;
   width: 160px;
   text-align: center;
   margin-left:15px;
+  color: white;
+}
+
+.description-box > a {
+  color: white;
 }
 
 
 .Detail-container {
+
 display: flex;
 flex-wrap: wrap;
 padding: 30px;
