--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ padding:20px;
   width: 160px;
   height: 400px;
   text-align: center;
+  padding: 40px;
 }
 
 
@@ -98,7 +99,6 @@ padding:20px;
   background-color: #080B59;
   margin:0;
   padding-bottom: 70px 30px;
-  position: absolute;
   bottom: 0;
   width: 100%;
 }
