fixed css on movie details page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -97,6 +97,7 @@ padding:20px;
   font-size:1.5em;
   color: #fff;
   background-color: #080B59;
+  position:relative;
   margin:0;
   padding-bottom: 70px 30px;
   bottom: 0;
