--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,16 +21,30 @@ body {
   color: #fff;
   background: #080B59;
   margin:0;
-  padding-top: 4px;
+  margin-top: -30px;
+  margin-bottom: 15px;
+  padding-top: 30px;
   width: 100%;
+
   /* // padding:0.5em; */
 }
 
 .title {
-  margin-top: -50px;
+  margin-top: -40px;
+  
+  display: flex;
+  justify-content: space-around;
+  
+}
+
+.title-text-box {
+  width: 270px;
+  height: 80px;
+  
 }
 
 .title-text {
+  margin-top: 10px;
   font-family: 'Maven Pro', cursive;
   font-size: 1.8em;
   text-align: center;
@@ -55,8 +69,8 @@ body {
   display: flex;
   justify-content: space-around;
   margin: auto ;
-  margin-top: -30px;
-  margin-bottom: 10px;
+  margin-top: -10px;
+  margin-bottom: 0px;
   color: #fff;
   background-color: #080B59;
 }
