css to movie list displays

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,15 +102,28 @@ padding:20px;
 }
 
 .img {
+  margin-top: -35px;
   width:200px;
   height: 300px;
 }
 
 .Item-box {
   width: 160px;
-  height: 400px;
-  text-align: center;
+  height: 420px;
   padding: 40px;
+}
+.Item-box-2 {
+  width: 160px;
+  height: 400px;
+  padding: 40px;
+}
+
+.heart-lower {
+  margin-top: 15px;
+}
+
+.text-raise {
+  margin-top: 0px;
 }
 
 .Ymal-detail-box {
@@ -168,11 +181,23 @@ padding:20px;
 }
 
 .description-box {
-  width: 160px;
+  width: 200px;
   text-align: center;
-  margin-left:15px;
+  margin-left:0px;
   color: white;
 }
+
+.heart-and-title {
+  width: 200px;
+  display: grid;
+  grid-template-columns:10% 90%;
+  color: white;
+}
+
+.white-text {
+  color: white;
+}
+
 
 .description-box > a {
   color: white;
