--- a/client/src/App.css
+++ b/client/src/App.css
@@ -108,6 +108,12 @@ padding:20px;
 
 .Item-box {
   width: 160px;
+  height: 420px;
+  text-align: center;
+  padding: 40px;
+}
+.Item-box-2 {
+  width: 160px;
   height: 400px;
   text-align: center;
   padding: 40px;
