--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,11 +56,28 @@ body {
   transform: scale(1.2);
 }
 
-.heart {
+.heart-container {
   margin-top: 25px;
   margin-right:25px;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: flex-end;
+}
+
+.heart {
+  width: 25px;
+  height: 25px;
   text-align: right;
 }
+
+.heart:active {
+  transform: scale(0.85);
+    /* Scaling button to 0.98 to its original size */
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+    /* Lowering the shadow */
+}
+
+
 
 /* .heart:hover {
   transform: scale(1.2);
@@ -105,6 +122,13 @@ padding:20px;
   margin-top: -35px;
   width:200px;
   height: 300px;
+  /* border: solid white; */
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+}
+
+.img:hover {
+  transform: scale(1.05);
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
 }
 
 .Item-box {
@@ -149,6 +173,14 @@ padding:20px;
 .Ymal-img {
   width:130px;
   height: 185px;
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+}
+
+.Ymal-img:hover {
+  transform: scale(1.05);
+  /* Scaling button to 0.98 to its original size */
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+  /* Lowering the shadow */
 }
 
 .Ymal-description-box {
@@ -228,6 +260,17 @@ padding: 30px;
 
 .zoom {
   width: 20px ;
+}
+
+.header-heart {
+  width: 20px ;
+  border: solid white;
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+}
+
+.header-heart:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
 
 .zoom:hover {
