--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,6 +40,9 @@ body {
   margin-bottom: 15px;
   padding-top: 30px;
   width: 100%;
+  position: fixed;
+  z-index: 2;
+  
 }
 
 .title {
@@ -217,6 +220,7 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px;
+
 }
 
 .Item-box {
@@ -262,6 +266,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 30px;
+  margin-top: 100px;
 }
 
 .Detail-box {
